# tauri-plugin-stronghold

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: clippy.yml  test.yml
api-src/: rollup.config.js
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
docs/: index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: Communication.html  Location.html  RemoteStore.html  RemoteVault.html  Store.html  Stronghold.html  Vault.html
docs/enums/: RelayDirection.html  RequestPermission.html  StrongholdFlag.html
docs/interfaces/: Duration.html  Status.html  SwarmInfo.html
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: lib.rs  p2p.rs  stronghold.rs
webview-dist/: index.d.ts  index.js  index.min.js  index.mjs
webview-src/: index.ts  rollup.config.js  tsconfig.json
