[package]
name = "tauri-plugin-stronghold"
version = "0.1.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
description = "A Tauri plugin for easily interfacing with IOTA Stronghold"
edition = "2018"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = "1.0.0"
thiserror = "1.0"
iota_stronghold = { version = "0.8.1", features = ["std"] }
stronghold_engine = "0.5.3"
stronghold-p2p = "0.4.2"
iota-crypto = { version = "0.12.1", features = ["hmac", "sha", "blake2b", "pbkdf", "slip10"] }
riker = { version = "0.4" }
once_cell = "1.8"
serde = "1.0"
serde_json = "1.0"
async-std = { version = "1.10", features = ["attributes"] }
slog = "2.7"
hex = "0.4"
zeroize = { version = "1.4", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"
