[package]
name = "tauri-plugin-stronghold"
version = "0.1.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
description = "A Tauri plugin for easily interfacing with IOTA Stronghold"
edition = "2018"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = "1"
thiserror = "1"
iota_stronghold = { version = "0.8" }
iota-crypto = "0.15"
serde = "1"
serde_json = "1"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"
