[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Tauri Programme within The Commons Conservancy" ]
repository = ""
edition = "2018"

[dependencies]
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
tauri = { version = "1", features = ["api-all"] }
tauri-plugin-stronghold = { path = "../../../" }
rust-argon2 = { version = "=1.0.0" }

[build-dependencies]
tauri-build = "1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev.package."*"]
opt-level = 3
